--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -87,8 +87,9 @@ body, html {height: 100%;}
 }
 
 .post {
+	& .card-content {padding-bottom: 0;}
 	&-image {
-		height: 11em;
+		height: 13em;
 		overflow: hidden;
 		position: relative;
 
@@ -124,6 +125,37 @@ body, html {height: 100%;}
 		margin-bottom: .25em;
 	}
 }
+
+.authorBlock {}
+
+.likeAndComments {
+	padding: .2em 1.35em .5em;
+	width: 100;
+	height: 2.5em;
+	// background: #eee;
+	color: #0277bd;
+}
+.likesBlock {
+	float: left;
+	.material-icons {font-size: 1.2em; vertical-align: text-bottom;}
+	span {font-size: .9em;}
+}
+.shareBlock {
+	float: left;
+	margin-left: 1em;
+	.material-icons {font-size: 1.2em; vertical-align: text-bottom;}
+	span {font-size: .9em;}
+}
+.btnComments {
+	@extend .reset-for-btn;
+	float: right;
+	border-bottom: 1px solid #0277bd;
+	line-height: 1em;
+	position: relative;
+	top: .1em;
+	span {font-size: .9em;}
+}
+
 .event-dateAndPlace {
 	@extend .txt-regular;
 	display: block;
