--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -1,8 +1,10 @@
-.reset-for-btn, .main-btn, .card-controls-btn {
+.reset-for-btn, .main-btn, .card-controls-btn, .btnComments {
   background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer; }
+  .reset-for-btn:focus, .main-btn:focus, .card-controls-btn:focus, .btnComments:focus {
+    background: transparent; }
 
 ._center, .homeSlider-itemContent .valign, .homeSlider-btn, .post .label {
   margin-left: auto;
@@ -10,6 +12,9 @@
 
 .txt-center, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title {
   text-align: center; }
+
+.txt-shadow, .main-title {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); }
 
 .txt-light {
   font-weight: 300; }
@@ -32,7 +37,7 @@
   clear: both; }
 
 .text-preview {
-  height: 200px;
+  height: 197px;
   overflow: hidden;
   position: relative; }
 
@@ -142,8 +147,10 @@ body, html {
     display: table;
     background-color: #64dd17; }
 
+.post .card-content {
+  padding-bottom: 0; }
 .post-image {
-  height: 11em;
+  height: 13em;
   overflow: hidden;
   position: relative; }
   .post-image img {
@@ -170,6 +177,38 @@ body, html {
     font-size: 1.3em; }
 .post .label {
   margin-bottom: .25em; }
+
+.likeAndComments {
+  padding: .2em 1.35em .5em;
+  width: 100;
+  height: 2.5em;
+  color: #0277bd; }
+
+.likesBlock {
+  float: left; }
+  .likesBlock .material-icons {
+    font-size: 1.2em;
+    vertical-align: text-bottom; }
+  .likesBlock span {
+    font-size: .9em; }
+
+.shareBlock {
+  float: left;
+  margin-left: 1em; }
+  .shareBlock .material-icons {
+    font-size: 1.2em;
+    vertical-align: text-bottom; }
+  .shareBlock span {
+    font-size: .9em; }
+
+.btnComments {
+  float: right;
+  border-bottom: 1px solid #0277bd;
+  line-height: 1em;
+  position: relative;
+  top: .1em; }
+  .btnComments span {
+    font-size: .9em; }
 
 .event-dateAndPlace {
   display: block;
