--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -10,7 +10,16 @@
   margin-left: auto;
   margin-right: auto; }
 
-.txt-center, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title {
+.upper {
+  text-transform: uppercase; }
+
+.lower {
+  text-transform: lowercase; }
+
+.capitalize {
+  text-transform: capitalize; }
+
+.txt-center, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title {
   text-align: center; }
 
 .txt-shadow, .main-title {
@@ -22,16 +31,16 @@
 .txt-regular, .event-dateAndPlace {
   font-weight: 400; }
 
-.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title {
+.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value {
   font-weight: 500; }
 
-.txt-bold, .main-btn, .card-controls-btn, .homeSlider-btn {
+.txt-bold, .main-btn, .card-controls-btn, .homeSlider-btn, .homeSlider-eventLink {
   font-weight: 600; }
 
 .transition, .main-btn, .card-controls-btn {
   transition: .2s; }
 
-.clearfix:after, .authorBlock:after {
+.clearfix:after, .authorBlock:after, .userPreview:after {
   content: '';
   display: block;
   clear: both; }
@@ -56,9 +65,8 @@
 
 .main-title {
   text-align: center;
-  text-transform: uppercase;
   color: #0091ea;
-  padding: 2.5em 0 1em; }
+  padding: 3.0em 0 1.5em; }
   .main-title span {
     font-size: 3em; }
 
@@ -151,7 +159,16 @@ body, html {
     background-color: #00bfa5 !important; }
   .homeSlider-btn {
     display: table;
-    background-color: #64dd17; }
+    background-color: #64dd17;
+    margin-bottom: 3em; }
+  .homeSlider-event {
+    color: #fff;
+    padding: 0 2em .5em;
+    line-height: 1.2em; }
+    .homeSlider-event span {
+      font-size: .85em;
+      color: #00e5ff;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); }
 
 .post .card-content {
   padding: 0 1.35em; }
@@ -305,5 +322,70 @@ body, html {
     vertical-align: text-bottom;
     position: relative;
     top: 2px; }
+
+.card-headerTitle {
+  color: #333;
+  padding-bottom: .85em;
+  border-bottom: 1px solid #cecece; }
+  .card-headerTitle span {
+    font-size: 1.2em; }
+
+.card-headerInput {
+  padding-top: 1em; }
+  .card-headerInput label {
+    display: block;
+    margin-bottom: .5em; }
+    .card-headerInput label span {
+      font-size: 1.2em; }
+  .card-headerInput input {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+    padding-left: 1em;
+    padding-right: 1em;
+    margin: 0;
+    border-bottom: none;
+    background: #eee; }
+    .card-headerInput input:focus {
+      background: #fff; }
+
+.userPreview {
+  position: relative;
+  margin-top: 1.4em;
+  padding-top: 1em;
+  border-bottom: 1px solid #cecece;
+  padding-bottom: 1em; }
+  .userPreview-img {
+    position: absolute;
+    top: 1em;
+    left: 0;
+    display: block;
+    float: left;
+    width: 3.5em;
+    height: 3.5em; }
+    .userPreview-img img {
+      width: 100%;
+      height: auto;
+      border-radius: 50%; }
+  .userPreview-info {
+    width: 100%;
+    padding-left: 4.3em; }
+  .userPreview-name {
+    display: block;
+    line-height: 1em;
+    padding-bottom: .5em; }
+    .userPreview-name span {
+      font-size: 1.2em; }
+  .userPreview-param {
+    line-height: 1em;
+    padding-bottom: .5em; }
+    .userPreview-param span {
+      font-size: .9em;
+      color: #aaa; }
+    .userPreview-param .param-value {
+      color: #333; }
+    .userPreview-param a.param-value {
+      color: #333; }
 
 /*# sourceMappingURL=all.css.map */
