added post tags

--- a/markup/sass/3-classes.scss
+++ b/markup/sass/3-classes.scss
@@ -60,7 +60,7 @@
 	text-align: center;
 	color: #0091ea;
 	padding: 3.0em 0 1.5em;
-	span {font-size: 3em;}
+	span {font-size: 3em; line-height: 1em;}
 }
 
 .main-subtitle {}
