--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -142,6 +142,15 @@ body, html {height: 100%;}
 		span {font-size: 1.3em;}
 	}
 
+	&-tags {
+		// padding: 0 1.35em;
+	}
+	&-tag {
+		color: #aaa;
+		font-style: italic;
+		span {font-size: .8em;}
+	}
+
 	.label {
 		@extend ._center;
 		margin-bottom: .25em;
@@ -338,7 +347,7 @@ body, html {height: 100%;}
 	&-name {
 		display: block;
 		line-height: 1em;
-		padding-bottom: .5em;
+		padding-bottom: .8em;
 
 		span {font-size: 1.2em;}
 	}
@@ -348,7 +357,7 @@ body, html {height: 100%;}
 		padding-bottom: .5em;
 
 		span {
-			font-size: .9em;
+			font-size: .85em;
 			color: #aaa;
 		}
 		.param-value {	
