--- a/markup/sass/4-content.scss
+++ b/markup/sass/4-content.scss
@@ -369,3 +369,119 @@ body, html {height: 100%;}
 		}
 	}
 }
+
+/* Page */
+.page {
+	@extend ._center;
+	display: table;
+
+	&.userPage {
+		.post {
+			margin-bottom: 1.5em;
+			border-bottom: 1px solid #eee;
+		}
+	}
+
+	&.card {
+		@extend .clearfix;
+		padding: 1em;
+		margin-top: 1em;
+
+		.authorBlock,
+		.likeAndComments,
+		.card-content {
+			padding-left: 0;
+			padding-right: 0;
+		}
+		.authorBlock {padding-right: .5em;}
+	}
+	.collapsible {
+		box-shadow: none;
+		&,
+		&-header,
+		&-body {
+			border: none;
+			padding: 0;
+		}
+
+		&-body {
+			line-height: 1.3em;
+			p {padding: 0;}
+			p span {font-size: .9em;}
+		}
+		.material-icons {color: $skyBlue;}
+	}
+
+	.narrowColumnWrapper {
+		// border: 1px solid #aaa;
+		width: 13em;
+		float: left;
+	}
+	.narrowColumn {
+		width: 100%;
+	}
+
+	.wideColumnWrapper {
+		// border: 1px solid #aaa;
+		width: 33em;
+		float: left;
+		padding-left: 1em;
+	}
+	.wideColumn {
+		width: 100%;
+	}
+
+	&-photo {
+		display: block;
+		width: 100%;
+		float: left;
+
+		img {
+			display: block;
+			width: 100%;
+			height: auto;
+			border-radius: 3px;
+		}
+	}
+
+	a {cursor: pointer;}
+
+	&-name {
+		@extend .txt-semibold;
+		display: block;
+		line-height: 1em;
+		padding-bottom: .8em;
+		margin-bottom: .8em;
+		border-bottom: 1px solid #e5e5e5;
+
+		span {font-size: 1.4em;}
+	}
+
+	&-param {
+		line-height: 1em;
+		padding-bottom: .4em;
+
+		span {
+			font-size: .75em;
+			color: #aaa;
+		}
+		.param-value {	
+			@extend .txt-semibold;
+			color: #333;
+		}
+		a.param-value {	
+			color: #333;
+		}
+	}
+
+	&-title {
+		@extend .txt-semibold;
+		line-height: 1em;
+		padding-bottom: .8em;
+		margin-bottom: 1.2em;
+		border-bottom: 1px solid #e5e5e5;
+
+		span {font-size: 1.2em;}
+	}
+}
+/* end Page */
