--- a/markup/sass/all.css
+++ b/markup/sass/all.css
@@ -6,7 +6,7 @@
   .reset-for-btn:focus, .main-btn:focus, .card-controls-btn:focus, .authorBlock-moreBtn:focus, .btnComments:focus {
     background: transparent; }
 
-._center, .homeSlider-itemContent .valign, .homeSlider-btn, .post .label {
+._center, .homeSlider-itemContent .valign, .homeSlider-btn, .post .label, .page {
   margin-left: auto;
   margin-right: auto; }
 
@@ -19,10 +19,10 @@
 .capitalize {
   text-transform: capitalize; }
 
-.txt-center, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title {
+.txt-center, .main-title, .main-subtitle, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .homeSlider-event, .post-title {
   text-align: center; }
 
-.txt-shadow, .main-title {
+.txt-shadow, .main-title, .main-subtitle {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); }
 
 .txt-light {
@@ -31,7 +31,7 @@
 .txt-regular, .event-dateAndPlace {
   font-weight: 400; }
 
-.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value {
+.txt-semibold, .homeSlider-title, .homeSlider-subTitle, .homeSlider-keyWordTitle, .post-title, .card-headerTitle, .userPreview-param .param-value, .page-name, .page-param .param-value, .page-title {
   font-weight: 500; }
 
 .txt-bold, .main-btn, .card-controls-btn, .homeSlider-btn, .homeSlider-eventLink {
@@ -40,7 +40,7 @@
 .transition, .main-btn, .card-controls-btn {
   transition: .2s; }
 
-.clearfix:after, .authorBlock:after, .userPreview:after {
+.clearfix:after, .authorBlock:after, .userPreview:after, .page.card:after {
   content: '';
   display: block;
   clear: both; }
@@ -64,12 +64,16 @@
   box-shadow: 0 0 7px 3px rgba(255, 255, 255, 0.8); }
 
 .main-title {
-  text-align: center;
   color: #0091ea;
   padding: 3.0em 0 1.5em; }
   .main-title span {
     font-size: 3em;
     line-height: 1em; }
+
+.main-subtitle {
+  padding: 1em 0 .8em; }
+  .main-subtitle span {
+    font-size: 1.5em; }
 
 .main-btn, .card-controls-btn {
   background: #0091ea;
@@ -393,5 +397,84 @@ body, html {
       color: #333; }
     .userPreview-param a.param-value {
       color: #333; }
+
+/* Page */
+.page {
+  display: table; }
+  .page.userPage .post {
+    margin-bottom: 1.5em;
+    border-bottom: 1px solid #eee; }
+  .page.card {
+    padding: 1em;
+    margin-top: 1em; }
+    .page.card .authorBlock,
+    .page.card .likeAndComments,
+    .page.card .card-content {
+      padding-left: 0;
+      padding-right: 0; }
+    .page.card .authorBlock {
+      padding-right: .5em; }
+  .page .collapsible {
+    box-shadow: none; }
+    .page .collapsible, .page .collapsible-header, .page .collapsible-body {
+      border: none;
+      padding: 0; }
+    .page .collapsible-body {
+      line-height: 1.3em; }
+      .page .collapsible-body p {
+        padding: 0; }
+      .page .collapsible-body p span {
+        font-size: .9em; }
+    .page .collapsible .material-icons {
+      color: #0091ea; }
+  .page .narrowColumnWrapper {
+    width: 13em;
+    float: left; }
+  .page .narrowColumn {
+    width: 100%; }
+  .page .wideColumnWrapper {
+    width: 33em;
+    float: left;
+    padding-left: 1em; }
+  .page .wideColumn {
+    width: 100%; }
+  .page-photo {
+    display: block;
+    width: 100%;
+    float: left; }
+    .page-photo img {
+      display: block;
+      width: 100%;
+      height: auto;
+      border-radius: 3px; }
+  .page a {
+    cursor: pointer; }
+  .page-name {
+    display: block;
+    line-height: 1em;
+    padding-bottom: .8em;
+    margin-bottom: .8em;
+    border-bottom: 1px solid #e5e5e5; }
+    .page-name span {
+      font-size: 1.4em; }
+  .page-param {
+    line-height: 1em;
+    padding-bottom: .4em; }
+    .page-param span {
+      font-size: .75em;
+      color: #aaa; }
+    .page-param .param-value {
+      color: #333; }
+    .page-param a.param-value {
+      color: #333; }
+  .page-title {
+    line-height: 1em;
+    padding-bottom: .8em;
+    margin-bottom: 1.2em;
+    border-bottom: 1px solid #e5e5e5; }
+    .page-title span {
+      font-size: 1.2em; }
+
+/* end Page */
 
 /*# sourceMappingURL=all.css.map */
