--- a/public/components/pages/users/users.html
+++ b/public/components/pages/users/users.html
@@ -1,1 +1,69 @@
-<h3>Users page</h3>
+<title>Поиск людей</title>
+
+<h3 class="main-title"> <span>Поиск людей</span> </h3>
+
+<div class="container">
+	<div class="row">
+		<div class="col l12 m12 s12 post-wrapper">
+			<div class="card">
+				<div class="card-content">
+					<h4 class="card-headerTitle">
+						<span> Найдено 1375 человек </span>
+					</h4>
+					<div class="card-headerInput">
+						<label for="searchInput">
+							<span>Введите один из параметров: имя, фамилия, группа, компания, год поступления, год выпуска, город, год рождения, возраст, пол </span>
+						</label>
+						<input id="searchInput" type="text" placeholder="Найти одногруппника...">
+					</div>
+
+					<div class="userPreview">
+						<a class="userPreview-img" href="">
+							<img src="/uploads/img/user-logo-small.jpg" alt="">
+						</a>
+						<div class="userPreview-info">
+							<a class="userPreview-name" href="">
+								<span> Владимир Круглов </span>
+							</a>
+							<div class="userPreview-param">
+								<span> Группа: </span>
+								<span class="param-value"> АИ-141 </span>
+							</div>
+							<div class="userPreview-param">
+								<span> Специальность: </span>
+								<span class="param-value"> Компьютерные науки </span>
+							</div>
+							<div class="userPreview-param">
+								<span> Работает в: </span>
+								<span class="param-value"> Luxoft </span>
+							</div>
+						</div>
+					</div>
+
+					<div class="userPreview">
+						<a class="userPreview-img" href="">
+							<img src="/uploads/img/user-logo-small.jpg" alt="">
+						</a>
+						<div class="userPreview-info">
+							<a class="userPreview-name" href="">
+								<span> Владимир Круглов </span>
+							</a>
+							<div class="userPreview-param">
+								<span> Группа: </span>
+								<span class="param-value"> АИ-141 </span>
+							</div>
+							<div class="userPreview-param">
+								<span> Специальность: </span>
+								<span class="param-value"> Компьютерные науки </span>
+							</div>
+							<div class="userPreview-param">
+								<span> Работает в: </span>
+								<span class="param-value"> Luxoft </span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
