added user list and search

--- a/public/components/pages/users/users.html
+++ b/public/components/pages/users/users.html
@@ -8,60 +8,37 @@
 			<div class="card">
 				<div class="card-content">
 					<h4 class="card-headerTitle">
-						<span> Найдено 1375 человек </span>
+						<!-- <span ng-if="users.length === 1"> Найден </span>
+						<span ng-if="users.length !== 1"> Найдено </span>
+						<span>{{users.length}}</span>
+						<span ng-if="users.length >= 2 && users.length <= 4"> человека </span>
+						<span ng-if="users.length < 2 || users.length > 4"> человек </span> -->
+						<span> Найдено людей: {{(users|filter:searchQuery).length}}</span>
 					</h4>
 					<div class="card-headerInput">
 						<label for="searchInput">
 							<span>Введите один из параметров: имя, фамилия, группа, компания, год поступления, год выпуска, город, год рождения, возраст, пол </span>
 						</label>
-						<input id="searchInput" type="text" placeholder="Найти одногруппника...">
+						<span ng-init="searchQuery = ''"></span>
+						<input ng-model="searchQuery" id="searchInput" type="text" placeholder="Найти одногруппника...">
+						{{searchQuery}}
 					</div>
 
-					<div class="userPreview">
+					<div ng-repeat="user in users|filter:searchQuery" class="userPreview">
 						<a class="userPreview-img" href="">
 							<img src="/uploads/img/user-logo-small.jpg" alt="">
 						</a>
 						<div class="userPreview-info">
 							<a class="userPreview-name" href="">
-								<span> Владимир Круглов </span>
+								<span> {{user.name}} {{user.surname}} </span>
 							</a>
 							<div class="userPreview-param">
-								<span> Группа: </span>
-								<span class="param-value"> АИ-141 </span>
-							</div>
-							<div class="userPreview-param">
-								<span> Специальность: </span>
-								<span class="param-value"> Компьютерные науки </span>
-							</div>
-							<div class="userPreview-param">
-								<span> Работает в: </span>
-								<span class="param-value"> Luxoft </span>
+								<span> Город: </span>
+								<span class="param-value"> {{user.city}} </span>
 							</div>
 						</div>
 					</div>
 
-					<div class="userPreview">
-						<a class="userPreview-img" href="">
-							<img src="/uploads/img/user-logo-small.jpg" alt="">
-						</a>
-						<div class="userPreview-info">
-							<a class="userPreview-name" href="">
-								<span> Владимир Круглов </span>
-							</a>
-							<div class="userPreview-param">
-								<span> Группа: </span>
-								<span class="param-value"> АИ-141 </span>
-							</div>
-							<div class="userPreview-param">
-								<span> Специальность: </span>
-								<span class="param-value"> Компьютерные науки </span>
-							</div>
-							<div class="userPreview-param">
-								<span> Работает в: </span>
-								<span class="param-value"> Luxoft </span>
-							</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
