Refactoring: User entity in server logic

--- a/markup/sass/1-variables.scss
+++ b/markup/sass/1-variables.scss
@@ -7,6 +7,7 @@ $orange: #ffab00; // button 'Search Groupmates'
 
 $marineLight: #b9f6ca; // title 'Совершенство'
 $skyBlue: #0091ea; // button 'News IT'
+$skyBlue-lighten: #00e5ff; // link color // auth pages pages-title color
 
 // others
 $btn-height: 37px;
