--- a/markup/sass/all.scss
+++ b/markup/sass/all.scss
@@ -7,6 +7,7 @@ $orange: #ffab00; // button 'Search Groupmates'
 
 $marineLight: #b9f6ca; // title 'Совершенство'
 $skyBlue: #0091ea; // button 'News IT'
+$skyBlue-lighten: #00e5ff; // link color // auth pages pages-title color
 
 // others
 $btn-height: 37px;
@@ -589,3 +590,42 @@ body, html {height: 100%;}
 	}
 }
 /* end Page */
+
+
+
+/* authPage */
+.authPage{
+	background-image: url(/uploads/img/img-8.jpg);
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	z-index: 1;
+
+	&-content {
+		overflow: auto;
+		background-color: rgba(0,0,0, .5);
+		width: 100%;
+		height: 100%;
+		position: relative;
+		z-index: 0;
+		padding-bottom: 1.5em;
+	}
+
+	.main-title {color: $skyBlue-lighten;}
+}
+.auth-btn {
+	@extend ._center;
+	display: table;
+	background: $skyBlue;
+}
+.auth-btn:focus {background: $skyBlue + 20 !important;}
+/* end authPage */
+
+/* adds to MaterializeCSS */
+	.card-secondTitle {
+		padding: .5em 0 0;
+		color: #333;
+		span {font-size: .9em;}
+	}
+/* end adds to MaterializeCSS */
