--- a/public/components/pages/home/home.html
+++ b/public/components/pages/home/home.html
@@ -1,3 +1,347 @@
 <title>ИКС ОНПУ</title>
 
-<h2>Home</h2>
+<div class="homeSliderWrapper">
+	<div class="homeSlider">
+		<div id="s1" class="homeSlider-item">
+			<div class="homeSlider-itemContent valign-wrapper">
+				<div class="valign">
+					<h1 class="homeSlider-title"> <span>ИКС</span> </h1>
+					<h2 class="homeSlider-subTitle"> <span>Институт Компьютерных Систем</span> </h2>
+					<h3 class="homeSlider-keyWordTitle"> <span>Интеллект</span> </h3>
+
+					<a class="homeSlider-btn btn waves-effect waves-light"> <span>Новости ИКСа</span> </a>
+
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Скоро: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук </span> </a>
+					</div>
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Недавнее событие: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Отчёт об конференции по Python в рамках ICS IT-School ( + фото) </span> </a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="s2" class="homeSlider-item">
+			<div class="homeSlider-itemContent valign-wrapper">
+				<div class="valign">
+					<h1 class="homeSlider-title"> <span>ИКС</span> </h1>
+					<h2 class="homeSlider-subTitle"> <span>Институт Компьютерных Систем</span> </h2>
+					<h3 class="homeSlider-keyWordTitle"> <span>Интеллект</span> </h3>
+
+					<a class="homeSlider-btn btn waves-effect waves-light"> <span>Новости ИКСа</span> </a>
+
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Скоро: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук </span> </a>
+					</div>
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Недавнее событие: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Отчёт об конференции по Python в рамках ICS IT-School ( + фото) </span> </a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="s3" class="homeSlider-item">
+			<div class="homeSlider-itemContent valign-wrapper">
+				<div class="valign">
+					<h1 class="homeSlider-title"> <span>ИКС</span> </h1>
+					<h2 class="homeSlider-subTitle"> <span>Институт Компьютерных Систем</span> </h2>
+					<h3 class="homeSlider-keyWordTitle"> <span>Интеллект</span> </h3>
+
+					<a class="homeSlider-btn btn waves-effect waves-light"> <span>Новости ИКСа</span> </a>
+
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Скоро: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук </span> </a>
+					</div>
+					<div class="homeSlider-event">
+						<span class="homeSlider-eventStatus">Недавнее событие: </span>
+						<a href="" class="homeSlider-eventLink"> <span> Отчёт об конференции по Python в рамках ICS IT-School ( + фото) </span> </a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<h3 class="main-title upper"> <span> Последние Новости</span> </h3>
+
+<div class="container">
+	
+	<div class="newsBlock homeNews row">
+		<div class="col l6 m6 s12 posts-wrapper">
+			<h4 class="main-subtitle"> <span>Новости ИКСа</span> </h4>
+
+			<div class="card post">
+				<div class="post-image">
+					<img src="/uploads/img/img-10.jpg">
+					<div class="post-imageContent valign-wrapper">
+						<h3 class="post-title valign"> 
+							<a href="">
+								<span class="label">
+									<span>Event <i class="material-icons">event</i></span>
+								</span>
+								<span class="event-dateAndPlace">
+									<span>12.03.2017, 18:00 ЧТ, Одесса, ул. Генуезская, 12, 3-й этаж, офис 307а</span>
+								</span>
+								<span>Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук</span>
+							</a>
+						</h3>
+					</div>
+				</div>
+
+				<div class="authorBlock">
+					<a class="authorBlock-img" href="">
+						<img src="/uploads/img/user-logo-small.jpg" alt="">
+					</a>
+					<div class="authorBlock-authorAndDate">
+						<a class="authorBlock-name" href="">
+							<span> Алексей Чалый </span>
+						</a>
+						<span class="authorBlock-date" href="">
+							<span> 1 ноя в 22:22 </span>
+						</span>
+					</div>
+
+					<button class="authorBlock-moreBtn waves-effect waves-light">
+						<i class="material-icons"> more_vert </i>
+					</button>
+				</div>
+
+				<div class="card-content">
+					<div class="text-preview clearfix">
+						<div class="post-tags">
+							<span class="post-tag"> <span>#event</span> </span>
+							<span class="post-tag"> <span>#ics</span> </span>
+						</div>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+
+				<div class="likeAndComments">
+					<div class="shareBlock txt-light">
+						<i class="material-icons"> share </i>
+						<span> Поделились </span>
+						<span class="txt-bold"> 105 </span>
+					</div>
+
+					<button class="btnComments"> <span>Комментарии (3)</span> </button>
+				</div>
+
+				<div class="card-controls">
+					<button class="card-controls-btn btn-half waves-effect waves-light"> <span>Записаться на событие</span> </button>
+					<button class="card-controls-btn btn-half btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
+				</div>
+			</div>
+
+			<div class="card post">
+				<div class="post-image">
+					<img src="/uploads/img/img-11.jpg">
+					<div class="post-imageContent valign-wrapper">
+						<h3 class="post-title valign"> 
+							<a href="">
+								<span>Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук</span>
+							</a>
+						</h3>
+					</div>
+				</div>
+
+				<div class="authorBlock">
+					<a class="authorBlock-img" href="">
+						<img src="/uploads/img/user-logo-small.jpg" alt="">
+					</a>
+					<div class="authorBlock-authorAndDate">
+						<a class="authorBlock-name" href="">
+							<span> Алексей Чалый </span>
+						</a>
+						<span class="authorBlock-date" href="">
+							<span> 1 ноя в 22:22 </span>
+						</span>
+					</div>
+
+					<button class="authorBlock-moreBtn waves-effect waves-light">
+						<i class="material-icons"> more_vert </i>
+					</button>
+				</div>
+
+				<div class="card-content">
+					<div class="text-preview clearfix">
+						<div class="post-tags">
+							<span class="post-tag"> <span>#ics</span> </span>
+						</div>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+
+				<div class="likeAndComments">
+					<div class="shareBlock txt-light">
+						<i class="material-icons"> share </i>
+						<span> Поделились </span>
+						<span class="txt-bold"> 105 </span>
+					</div>
+
+					<button class="btnComments"> <span>Комментарии (3)</span> </button>
+				</div>
+
+				<div class="card-controls">
+					<button class="card-controls-btn btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="col l6 m6 s12 posts-wrapper">
+			<h4 class="main-subtitle"> <span>Новости Технологий</span> </h4>
+
+			<div class="card post">
+				<div class="post-image">
+					<img src="/uploads/img/img-7.jpg">
+					<div class="post-imageContent valign-wrapper">
+						<h3 class="post-title valign"> 
+							<a href="">
+								<span>Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук</span>
+							</a>
+						</h3>
+					</div>
+				</div>
+
+				<div class="authorBlock">
+					<a class="authorBlock-img" href="">
+						<img src="/uploads/img/user-logo-small.jpg" alt="">
+					</a>
+					<div class="authorBlock-authorAndDate">
+						<a class="authorBlock-name" href="">
+							<span> Алексей Чалый </span>
+						</a>
+						<span class="authorBlock-date" href="">
+							<span> 1 ноя в 22:22 </span>
+						</span>
+					</div>
+
+					<button class="authorBlock-moreBtn waves-effect waves-light">
+						<i class="material-icons"> more_vert </i>
+					</button>
+				</div>
+
+				<div class="card-content">
+					<div class="text-preview clearfix">
+						<div class="post-tags">
+							<span class="post-tag"> <span>#it</span> </span>
+						</div>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+
+				<div class="likeAndComments">
+					<div class="shareBlock txt-light">
+						<i class="material-icons"> share </i>
+						<span> Поделились </span>
+						<span class="txt-bold"> 105 </span>
+					</div>
+
+					<button class="btnComments"> <span>Комментарии (3)</span> </button>
+				</div>
+
+				<div class="card-controls">
+					<button class="card-controls-btn btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
+				</div>
+			</div>
+
+			<div class="card post">
+				<div class="post-image">
+					<img src="/uploads/img/img-9.jpg">
+					<div class="post-imageContent valign-wrapper">
+						<h3 class="post-title valign"> 
+							<a href="">
+								<span>Відкриття 15-ї обласної науково-практичної конференції Одеського територіального відділення Малої академії наук</span>
+							</a>
+						</h3>
+					</div>
+				</div>
+
+				<div class="authorBlock">
+					<a class="authorBlock-img" href="">
+						<img src="/uploads/img/user-logo-small.jpg" alt="">
+					</a>
+					<div class="authorBlock-authorAndDate">
+						<a class="authorBlock-name" href="">
+							<span> Алексей Чалый </span>
+						</a>
+						<span class="authorBlock-date" href="">
+							<span> 1 ноя в 22:22 </span>
+						</span>
+					</div>
+
+					<button class="authorBlock-moreBtn waves-effect waves-light">
+						<i class="material-icons"> more_vert </i>
+					</button>
+				</div>
+
+				<div class="card-content">
+					<div class="text-preview clearfix">
+						<div class="post-tags">
+							<span class="post-tag"> <span>#it</span> </span>
+						</div>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					</div>
+				</div>
+
+				<div class="likeAndComments">
+					<div class="shareBlock txt-light">
+						<i class="material-icons"> share </i>
+						<span> Поделились </span>
+						<span class="txt-bold"> 105 </span>
+					</div>
+
+					<button class="btnComments"> <span>Комментарии (3)</span> </button>
+				</div>
+
+				<div class="card-controls">
+					<button class="card-controls-btn btn-white  waves-effect waves-light"> <span>Читать далее</span> </button>
+				</div>
+			</div>
+		</div>
+	</div>	
+
+</div>
