--- a/markup/sass/all.scss
+++ b/markup/sass/all.scss
@@ -91,7 +91,7 @@ $btn-height: 37px;
 .main-input:focus {}
 
 .main-btn {
-	@extend .transition, .reset-for-btn, .txt-bold;
+	@extend .transition, .reset-for-btn, .txt-bold, .txt-center;
     background: #0091ea;
     border-radius: 30px;
     padding: .4em .5em;
@@ -99,7 +99,11 @@ $btn-height: 37px;
     color: #fff;
     line-height: 1.2em;
     display: table;
-    span {font-size: .9em;}
+    span {
+    	font-size: .9em;
+    	display: inline-block;
+    	width: 100%;
+    }
 
     &:hover {background: (#009688) + 20;}
     &:focus {background: (#0091ea) + 20;}
